# cookiecutter-simple-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_slug}}/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
