[project]
name = "{{ cookiecutter.package_name }}"
authors = [
    {name = "Adam Pirog"},
    {email = "pirog.adam@gmail.com"},
]
description = "{{ cookiecutter.short_project_description }}"
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]

{%- if cookiecutter.command_line_interface == "y" %}
[project.scripts]
{{ cookiecutter.package_slug }} = "{{ cookiecutter.package_name }}.__main__:cli"
{%- endif %}

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
packages = ["{{ cookiecutter.package_name }}"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.version.__version__"}

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
