[metadata]
name = {{ cookiecutter.package_name }}
description = {{ cookiecutter.short_project_description }}
version = attr: {{ cookiecutter.package_name }}.version.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Pirog
author_email = pirog.adam@gmail.com
url = https://github.com/adampirog
license = MIT
classifiers =
    Programming Language :: Python :: 3


[options]
python_requires = >=3.11
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    

[options.extras_require]
dev =
    pytest
    isort
    black
    mypy
    pylint

{% if cookiecutter.command_line_interface == "y" %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.__main__:cli
{% endif %}

[options.package_data]
* = *.md

[bdist_wheel]
universal = 1
